kubernetes/manifests/development/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscription-frontend-service
  namespace: subscription-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002  # Choose a NodePort
  selector:
    app: subscription-frontend
