kubernetes/manifests/development/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: subscription-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001  # Choose a NodePort if you want
  selector:
    app: nginx
