kubernetes/manifests/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscription-service
  namespace: subscription-service
spec:
  type: NodePort
  selector:
    app: subscription
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
      name: http
