kubernetes/manifests/development/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subscription-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: subscription-app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: subscription-frontend-service
                port:
                  number: 80
